[tool.poetry]
name = "agroapi"
version = "0.1.0"
description = ""
authors = ["romilsonlonan <romilsonlonan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.*"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
flake8 = "^7.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
taskipy = "^1.13.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.flake8]
flake8 = {"max-line-length"= 79}

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.taskipy.tasks]
run = 'fastapi dev agrofastapi/app.py'
pre_test = 'task lint'
test = 'pytest --cov=agrofastapi -vv'
post_test = 'coverage html'
lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
